--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,8 @@ services:
         sync: false
       - key: ELEVENLABS_API_KEY
         sync: false
+      - key: API_KEY
+        sync: false
     disk:
       name: chaicast-data
       mountPath: /opt/render/project/src/output
